--- a/WEMANAGE/src/main/resources/application.properties
+++ b/WEMANAGE/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/WEMANAGE?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
