--- a/WEMANAGEGIT/WEMANAGEGIT/pom.xml
+++ b/WEMANAGEGIT/WEMANAGEGIT/pom.xml
@@ -88,6 +88,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			  <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
