--- a/WEMANAGEGIT/WEMANAGEGIT/src/main/resources/application.properties
+++ b/WEMANAGEGIT/WEMANAGEGIT/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/WEMANAGE?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/WEMANAGE?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=update
+server.port=3030
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 
